Bug: when text overflow, column shifts left

--- a/source/components/Tables/ReportTables/ReportOrdersTable/styles.m.css
+++ b/source/components/Tables/ReportTables/ReportOrdersTable/styles.m.css
@@ -8,12 +8,17 @@
     min-width: 0 !important; /*IMPORTANT it solves antd table issue when scrolling is added*/
     font-size: 0.8em;
     font-style: bold;
+    padding: 0;
 }
 
 .table :global(.ant-pagination) {
     float: none;
     justify-content: center;
     display: flex;
+}
+
+.table :global(th) {
+    padding: 6px 4px 6px 4px !important; /*Remove bug: when text overflows, header shifts left*/
 }
 
 .paper {
